--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
              </li>
 
              <li>
-                <a href="https://drive.google.com/file/d/122W7p4WufGvSmcAp5w3eAEUG_75rLxkf/view?usp=sharing">
+                <a href="https://drive.google.com/file/d/122W7p4WufGvSmcAp5w3eAEUG_75rLxkf/view?usp=sharing" target="blank">
                  <div class="linktree-box">
                      <div class="icon-box"style="--color: 42, 53%, 79%"><svg width="34" height="36" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M19.8557 4.11001L7.37638 0.978242C6.07797 0.652396 4.76295 1.4477 4.43922 2.7546L0.881307 17.1178C0.557575 18.4247 1.34771 19.7483 2.64613 20.0742L15.1255 23.206C16.4239 23.5318 17.7389 22.7365 18.0626 21.4296L21.6205 7.06636C21.9443 5.75946 21.1541 4.43586 19.8557 4.11001Z" fill="white"/>
